Added the Cosmos set of sass, moved meta to above the post content.

--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -1,5 +1,8 @@
 // Core variables and mixins
-@import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/variables";
+//@import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/variables";
+//the fonts
+@import "../fonts/cosmos/stylesheet.css";
+@import "cosmos/_ncg_cosmos_variables";
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins";
 
 // Reset and dependencies
@@ -9,7 +12,7 @@
 
 // Core CSS
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/scaffolding";
-@import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/type";
+//@import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/type";
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/code";
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/grid";
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/tables";
@@ -52,3 +55,5 @@
 /**
  * Custom theme styles should be imported here.
  */
+@import "_ncg_wordpress.scss";
+@import "cosmos/_ncg_cosmos.scss";
