--- a/sass/cosmos/_ncg_cosmos.scss
+++ b/sass/cosmos/_ncg_cosmos.scss
@@ -3,9 +3,13 @@
  */
 
 .glow {
-	border-color: rgba(215, 237, 255, 0.42);
+	border-color: rgba(215, 237, 255, 0.20);
 	box-shadow: 0 0 20px rgba(207, 247, 188, 0.57), 0 0 200px rgba(0, 0, 0, 0.67) inset;
 	background: rgba(7, 44, 11, 0.5);
+}
+.background {
+	background: rgba(7, 44, 11, 0.5);
+	box-shadow: 0 0 200px rgba(0, 0, 0, 0.67) inset;
 }
 @mixin innerBorder () {
 	margin-bottom: 20px;
@@ -20,7 +24,7 @@ body {
 }
 
 .site-header nav {
-	background: rgba(0, 0, 0, 0.81);
+	background: rgba(0, 0, 0, 0.60);
 	border-bottom: 1px solid rgba(239, 239, 239, 0.51);
 	margin-bottom: 20px;
 	box-shadow: 0 0 12px $brand-primary, -3px -3px 26px rgba(255, 0, 0, 0.26) inset;
@@ -42,7 +46,8 @@ body {
 	article {
 		margin-bottom: 20px;
 		@extend .row;
-		@include innerBorder();
+		@extend .background;
+		//@include innerBorder();
 	}
 }
 #secondary {
@@ -56,6 +61,74 @@ body {
 			margin-bottom: 20px;
 			@extend .col-xs-12;
 			@include innerBorder();
+		}
+	}
+}
+
+
+/**
+ * Post rules
+ */
+
+article {
+	.entry-header {
+	@extend .col-xs-12;
+	}
+	// Make post-content full width if no thumb.
+	&:not(.has-post-thumbnail) .entry-content {
+		@extend .col-xs-12;
+	}
+
+
+}
+
+// Archive title rules
+header.entry-header h2 {
+	border-bottom: 1px solid rgba(255, 255, 255, 0.50);
+	padding: 5px 0;
+	font-family: "michromaregular";
+	text-transform: uppercase;
+	a {
+		color: #fff;
+		text-shadow: 0 0 17px #fff;
+	}
+}
+
+// Sticky post header rules
+.sticky header.entry-header h2 {
+	border-bottom: 1px solid rgba(255, 0, 0, 0.50);
+}
+
+// Featured image rules
+// Archive
+
+.has-post-thumbnail {
+	.entry-content {
+		@extend .col-xs-6;
+	}
+	.post-thumbnail {
+		@extend .col-xs-6;
+	}
+}
+
+// footer and meta
+.entry-footer {
+	margin-top: 10px;
+	margin-bottom: 20px;
+	font-size: 11px;
+	font-family: $font-family-monospace;
+	@extend .col-xs-12;
+	div {
+		border-left: 1px solid rgba(239, 239, 239, 0.32);
+		@extend .col-xs-4;
+	}
+	p, ul {
+		margin: 0;
+	}
+	ul {
+		padding: 0;
+		li {
+			list-style: none;
 		}
 	}
 }
