--- a/theme/css/theme.css
+++ b/theme/css/theme.css
@@ -11,7 +11,7 @@ header.site-header {
 }
 header.site-header a {
   color: #fff;
-  text-shadow: 0 0 2px #337ab7, 0 0 4px black;
+  text-shadow: 0 0 2px #eeab05, 0 0 4px black;
 }
 
 /**
@@ -1419,11 +1419,11 @@ textarea {
 }
 
 a {
-  color: #337ab7;
+  color: #eeab05;
   text-decoration: none;
 }
 a:hover, a:focus {
-  color: #23527c;
+  color: #a37503;
   text-decoration: underline;
 }
 a:focus {
@@ -1607,14 +1607,14 @@ pre code {
   clear: both;
 }
 
-.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, #secondary, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, #primary, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, #secondary > ul > li, .col-sm-12, .col-md-12, .col-lg-12 {
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .entry-footer div, .col-sm-4, .col-md-4, #secondary, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .has-post-thumbnail .entry-content, .has-post-thumbnail .post-thumbnail, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, #primary, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, #secondary > ul > li, article .entry-header, article:not(.has-post-thumbnail) .entry-content, .entry-footer, .col-sm-12, .col-md-12, .col-lg-12 {
   position: relative;
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
 }
 
-.col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12, #secondary > ul > li {
+.col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .entry-footer div, .col-xs-5, .col-xs-6, .has-post-thumbnail .entry-content, .has-post-thumbnail .post-thumbnail, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12, #secondary > ul > li, article .entry-header, article:not(.has-post-thumbnail) .entry-content, .entry-footer {
   float: left;
 }
 
@@ -1630,7 +1630,7 @@ pre code {
   width: 25%;
 }
 
-.col-xs-4 {
+.col-xs-4, .entry-footer div {
   width: 33.33333%;
 }
 
@@ -1638,7 +1638,7 @@ pre code {
   width: 41.66667%;
 }
 
-.col-xs-6 {
+.col-xs-6, .has-post-thumbnail .entry-content, .has-post-thumbnail .post-thumbnail {
   width: 50%;
 }
 
@@ -1662,7 +1662,7 @@ pre code {
   width: 91.66667%;
 }
 
-.col-xs-12, #secondary > ul > li {
+.col-xs-12, #secondary > ul > li, article .entry-header, article:not(.has-post-thumbnail) .entry-content, .entry-footer {
   width: 100%;
 }
 
@@ -2751,7 +2751,7 @@ output {
   padding-top: 7px;
   font-size: 14px;
   line-height: 1.42857;
-  color: #555555;
+  color: #eeeeee;
 }
 
 .form-control {
@@ -2761,10 +2761,10 @@ output {
   padding: 6px 12px;
   font-size: 14px;
   line-height: 1.42857;
-  color: #555555;
-  background-color: white;
+  color: #eeeeee;
+  background-color: rgba(0, 0, 0, 0.4);
   background-image: none;
-  border: 1px solid #cccccc;
+  border: 1px solid #555555;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -2773,10 +2773,10 @@ output {
   transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
 }
 .form-control:focus {
-  border-color: #66afe9;
+  border-color: rgba(230, 15, 0, 0.5);
   outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(230, 15, 0, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(230, 15, 0, 0.6);
 }
 .form-control::-moz-placeholder {
   color: #999999;
@@ -2790,7 +2790,7 @@ output {
 }
 .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
   cursor: not-allowed;
-  background-color: #eeeeee;
+  background-color: rgba(0, 0, 0, 0.1);
   opacity: 1;
 }
 
@@ -3325,23 +3325,23 @@ select[multiple].input-lg,
 
 .btn-primary {
   color: white;
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: rgba(255, 17, 0, 0.5);
+  border-color: rgba(230, 15, 0, 0.5);
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary.focus, .btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle {
   color: white;
-  background-color: #286090;
-  border-color: #204d74;
+  background-color: rgba(204, 14, 0, 0.5);
+  border-color: rgba(168, 11, 0, 0.5);
 }
 .btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle {
   background-image: none;
 }
 .btn-primary.disabled, .btn-primary.disabled:hover, .btn-primary.disabled:focus, .btn-primary.disabled.focus, .btn-primary.disabled:active, .btn-primary.disabled.active, .btn-primary[disabled], .btn-primary[disabled]:hover, .btn-primary[disabled]:focus, .btn-primary[disabled].focus, .btn-primary[disabled]:active, .btn-primary[disabled].active, fieldset[disabled] .btn-primary, fieldset[disabled] .btn-primary:hover, fieldset[disabled] .btn-primary:focus, fieldset[disabled] .btn-primary.focus, fieldset[disabled] .btn-primary:active, fieldset[disabled] .btn-primary.active {
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: rgba(255, 17, 0, 0.5);
+  border-color: rgba(230, 15, 0, 0.5);
 }
 .btn-primary .badge {
-  color: #337ab7;
+  color: rgba(255, 17, 0, 0.5);
   background-color: white;
 }
 
@@ -3434,7 +3434,7 @@ select[multiple].input-lg,
 }
 
 .btn-link {
-  color: #337ab7;
+  color: #eeab05;
   font-weight: normal;
   border-radius: 0;
 }
@@ -3447,7 +3447,7 @@ select[multiple].input-lg,
   border-color: transparent;
 }
 .btn-link:hover, .btn-link:focus {
-  color: #23527c;
+  color: #a37503;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -3602,7 +3602,7 @@ tbody.collapse.in {
   color: white;
   text-decoration: none;
   outline: 0;
-  background-color: #337ab7;
+  background-color: #eeab05;
 }
 
 .dropdown-menu > .disabled > a, .dropdown-menu > .disabled > a:hover, .dropdown-menu > .disabled > a:focus {
@@ -3923,10 +3923,10 @@ tbody.collapse.in {
   font-size: 14px;
   font-weight: normal;
   line-height: 1;
-  color: #555555;
+  color: #eeeeee;
   text-align: center;
   background-color: #eeeeee;
-  border: 1px solid #cccccc;
+  border: 1px solid #555555;
   border-radius: 4px;
 }
 .input-group-addon.input-sm,
@@ -4037,7 +4037,7 @@ tbody.collapse.in {
 }
 .nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
   background-color: #eeeeee;
-  border-color: #337ab7;
+  border-color: #eeab05;
 }
 .nav .nav-divider {
   height: 1px;
@@ -4084,7 +4084,7 @@ tbody.collapse.in {
 }
 .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
   color: white;
-  background-color: #337ab7;
+  background-color: #eeab05;
 }
 
 .nav-stacked > li {
@@ -4724,7 +4724,7 @@ tbody.collapse.in {
   padding: 6px 12px;
   line-height: 1.42857;
   text-decoration: none;
-  color: #337ab7;
+  color: #eeab05;
   background-color: white;
   border: 1px solid #dddddd;
   margin-left: -1px;
@@ -4743,7 +4743,7 @@ tbody.collapse.in {
 .pagination > li > a:hover, .pagination > li > a:focus,
 .pagination > li > span:hover,
 .pagination > li > span:focus {
-  color: #23527c;
+  color: #a37503;
   background-color: #eeeeee;
   border-color: #dddddd;
 }
@@ -4753,8 +4753,8 @@ tbody.collapse.in {
 .pagination > .active > span:focus {
   z-index: 2;
   color: white;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #eeab05;
+  border-color: #eeab05;
   cursor: default;
 }
 .pagination > .disabled > span,
@@ -4881,10 +4881,10 @@ a.label:hover, a.label:focus {
 }
 
 .label-primary {
-  background-color: #337ab7;
+  background-color: #eeab05;
 }
 .label-primary[href]:hover, .label-primary[href]:focus {
-  background-color: #286090;
+  background-color: #bc8704;
 }
 
 .label-success {
@@ -4941,7 +4941,7 @@ a.label:hover, a.label:focus {
   padding: 1px 5px;
 }
 .list-group-item.active > .badge, .nav-pills > .active > a > .badge {
-  color: #337ab7;
+  color: #eeab05;
   background-color: white;
 }
 .list-group-item > .badge {
@@ -5026,7 +5026,7 @@ a.badge:hover, a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #337ab7;
+  border-color: #eeab05;
 }
 
 .alert {
@@ -5148,7 +5148,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: white;
   text-align: center;
-  background-color: #337ab7;
+  background-color: #eeab05;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -5312,8 +5312,8 @@ a.list-group-item:hover, a.list-group-item:focus {
 .list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
   z-index: 2;
   color: white;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #eeab05;
+  border-color: #eeab05;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active .list-group-item-heading > small,
@@ -5325,7 +5325,7 @@ a.list-group-item:hover, a.list-group-item:focus {
   color: inherit;
 }
 .list-group-item.active .list-group-item-text, .list-group-item.active:hover .list-group-item-text, .list-group-item.active:focus .list-group-item-text {
-  color: #c7ddef;
+  color: #feecc1;
 }
 
 .list-group-item-success {
@@ -5690,22 +5690,22 @@ a.list-group-item-danger.active, a.list-group-item-danger.active:hover, a.list-g
 }
 
 .panel-primary {
-  border-color: #337ab7;
+  border-color: #eeab05;
 }
 .panel-primary > .panel-heading {
   color: white;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #eeab05;
+  border-color: #eeab05;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #337ab7;
+  border-top-color: #eeab05;
 }
 .panel-primary > .panel-heading .badge {
-  color: #337ab7;
+  color: #eeab05;
   background-color: white;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #337ab7;
+  border-bottom-color: #eeab05;
 }
 
 .panel-success {
@@ -6793,10 +6793,15 @@ article figure {
 /**
  * Cosmos theme styles
  */
-.glow, #primary article, #secondary > ul > li {
-  border-color: rgba(215, 237, 255, 0.42);
+.glow, #secondary > ul > li {
+  border-color: rgba(215, 237, 255, 0.2);
   box-shadow: 0 0 20px rgba(207, 247, 188, 0.57), 0 0 200px rgba(0, 0, 0, 0.67) inset;
   background: rgba(7, 44, 11, 0.5);
+}
+
+.background, #primary article {
+  background: rgba(7, 44, 11, 0.5);
+  box-shadow: 0 0 200px rgba(0, 0, 0, 0.67) inset;
 }
 
 body {
@@ -6804,25 +6809,21 @@ body {
 }
 
 .site-header nav {
-  background: rgba(0, 0, 0, 0.81);
+  background: rgba(0, 0, 0, 0.6);
   border-bottom: 1px solid rgba(239, 239, 239, 0.51);
   margin-bottom: 20px;
-  box-shadow: 0 0 12px #337ab7, -3px -3px 26px rgba(255, 0, 0, 0.26) inset;
+  box-shadow: 0 0 12px #eeab05, -3px -3px 26px rgba(255, 0, 0, 0.26) inset;
 }
 
 .navbar-toggle {
-  border-color: #337ab7;
+  border-color: #eeab05;
 }
 .navbar-toggle .icon-bar {
-  background-color: #337ab7;
+  background-color: #eeab05;
 }
 
 #primary article {
   margin-bottom: 20px;
-  margin-bottom: 20px;
-  padding: 10px;
-  border: 1px solid;
-  border-radius: 6px;
 }
 
 #secondary > ul {
@@ -6836,4 +6837,41 @@ body {
   padding: 10px;
   border: 1px solid;
   border-radius: 6px;
+}
+
+/**
+ * Post rules
+ */
+header.entry-header h2 {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  padding: 5px 0;
+  font-family: "michromaregular";
+  text-transform: uppercase;
+}
+header.entry-header h2 a {
+  color: #fff;
+  text-shadow: 0 0 17px #fff;
+}
+
+.sticky header.entry-header h2 {
+  border-bottom: 1px solid rgba(255, 0, 0, 0.5);
+}
+
+.entry-footer {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  font-size: 11px;
+  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+.entry-footer div {
+  border-left: 1px solid rgba(239, 239, 239, 0.32);
+}
+.entry-footer p, .entry-footer ul {
+  margin: 0;
+}
+.entry-footer ul {
+  padding: 0;
+}
+.entry-footer ul li {
+  list-style: none;
 }
