--- a/sass/cosmos/_ncg_cosmos_variables.scss
+++ b/sass/cosmos/_ncg_cosmos_variables.scss
@@ -178,7 +178,7 @@ $btn-default-bg:                 #fff !default;
 $btn-default-border:             #ccc !default;
 
 $btn-primary-color:              #fff !default;
-$btn-primary-bg:                 rgba(255, 17, 0, 0.50) !default;
+$btn-primary-bg:                 rgba($brand-primary, 0.50) !default;
 $btn-primary-border:             darken($btn-primary-bg, 5%) !default;
 
 $btn-success-color:              #fff !default;
